fix prefix alignments

--- a/frontend/src/styles/messages.less
+++ b/frontend/src/styles/messages.less
@@ -47,9 +47,11 @@
 
       .message-prefix {
         display: none;
-        margin-left: -9px;
+        margin-left: -8px;
         margin-right: 5px;
-        align-items: center;
+        flex: 0 0 43px;
+        width: 43px;
+        padding-top: 4px;
       }
 
       .message-timestamp {
